--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,83 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-altair=5.3.0=pypi_0
-annotated-types=0.7.0=pypi_0
-anyio=4.4.0=pypi_0
-asttokens=2.4.1=pyhd8ed1ab_0
-attrs=23.2.0=pypi_0
-blinker=1.8.2=pypi_0
-bzip2=1.0.8=h2bbff1b_6
-ca-certificates=2024.2.2=h56e8100_0
-cachetools=5.3.3=pypi_0
-certifi=2024.2.2=pypi_0
-charset-normalizer=3.3.2=pypi_0
-click=8.1.7=pypi_0
-colorama=0.4.6=pyhd8ed1ab_0
-comm=0.2.2=pyhd8ed1ab_0
-debugpy=1.6.7=py312hd77b12b_0
-decorator=5.1.1=pyhd8ed1ab_0
-distro=1.9.0=pypi_0
-exceptiongroup=1.2.0=pyhd8ed1ab_2
-executing=2.0.1=pyhd8ed1ab_0
-expat=2.6.2=hd77b12b_0
-gitdb=4.0.11=pypi_0
-gitpython=3.1.43=pypi_0
-h11=0.14.0=pypi_0
-httpcore=1.0.5=pypi_0
-httpx=0.27.0=pypi_0
-idna=3.7=pypi_0
-importlib-metadata=7.1.0=pyha770c72_0
-importlib_metadata=7.1.0=hd8ed1ab_0
-ipykernel=6.29.3=pyha63f2e9_0
-ipython=8.24.0=pyh7428d3b_0
-jedi=0.19.1=pyhd8ed1ab_0
-jinja2=3.1.4=pypi_0
-jsonschema=4.22.0=pypi_0
-jsonschema-specifications=2023.12.1=pypi_0
-jupyter_client=8.6.2=pyhd8ed1ab_0
-jupyter_core=5.5.0=py312haa95532_0
-libffi=3.4.4=hd77b12b_1
-libsodium=1.0.18=h8d14728_1
-markdown-it-py=3.0.0=pypi_0
-markupsafe=2.1.5=pypi_0
-matplotlib-inline=0.1.7=pyhd8ed1ab_0
-mdurl=0.1.2=pypi_0
-mistralai=0.3.0=pypi_0
-nest-asyncio=1.6.0=pyhd8ed1ab_0
-numpy=1.26.4=pypi_0
-openai=1.30.5=pypi_0
-openssl=3.0.13=h2bbff1b_2
-orjson=3.10.3=pypi_0
-packaging=24.0=pyhd8ed1ab_0
-pandas=2.2.2=pypi_0
-parso=0.8.4=pyhd8ed1ab_0
-pickleshare=0.7.5=py_1003
-pillow=10.3.0=pypi_0
-pip=24.0=py312haa95532_0
-platformdirs=4.2.2=pyhd8ed1ab_0
-prompt-toolkit=3.0.42=pyha770c72_0
-protobuf=4.25.3=pypi_0
-psutil=5.9.0=py312h2bbff1b_0
-pure_eval=0.2.2=pyhd8ed1ab_0
-pyarrow=16.1.0=pypi_0
-pydantic=2.7.2=pypi_0
-pydantic-core=2.18.3=pypi_0
-pydeck=0.9.1=pypi_0
-pygments=2.18.0=pyhd8ed1ab_0
-python=3.12.3=h1d929f7_1
-python-dateutil=2.9.0=pyhd8ed1ab_0
-pytz=2024.1=pypi_0
-pywin32=305=py312h2bbff1b_0
-pyzmq=25.1.2=py312hd77b12b_0
-referencing=0.35.1=pypi_0
-requests=2.32.3=pypi_0
-rich=13.7.1=pypi_0
-rpds-py=0.18.1=pypi_0
-setuptools=69.5.1=py312haa95532_0
-six=1.16.0=pyh6c4a22f_0
-smmap=5.0.1=pypi_0
-sniffio=1.3.1=pypi_0
-sqlite=3.45.3=h2bbff1b_0
-stack_data=0.6.2=pyhd8ed1ab_0
-streamlit=1.35.0=pypi_0
-tenacity=8.3.0=pypi_0
-tk=8.6.14=h0416ee5_0
-toml=0.10.2=pypi_0
-toolz=0.12.1=pypi_0
-tornado=6.3.3=py312h2bbff1b_0
-tqdm=4.66.4=pypi_0
-traitlets=5.14.3=pyhd8ed1ab_0
-typing-extensions=4.12.0=pypi_0
-typing_extensions=4.11.0=pyha770c72_0
-tzdata=2024.1=pypi_0
-urllib3=2.2.1=pypi_0
-vc=14.2=h2eaa2aa_1
-vs2015_runtime=14.29.30133=h43f2093_3
-watchdog=4.0.1=pypi_0
-wcwidth=0.2.13=pyhd8ed1ab_0
-wheel=0.43.0=py312haa95532_0
-xz=5.4.6=h8cc25b3_1
-zeromq=4.3.5=hd77b12b_0
-zipp=3.17.0=pyhd8ed1ab_0
-zlib=1.2.13=h8cc25b3_1
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.4.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+attrs==23.2.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+debugpy @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/debugpy_1699554994633/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+distro==1.9.0
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
+ipykernel @ file:///D:/bld/ipykernel_1708996677248/work
+ipython @ file:///D:/bld/ipython_1715263443743/work
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
+jupyter_core @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jupyter_core_1701796658071/work
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+mdurl==0.1.2
+mistralai==0.3.0
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+numpy==1.26.4
+openai==1.30.5
+orjson==3.10.3
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
+pandas==2.2.2
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pillow==10.3.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
+protobuf==4.25.3
+psutil @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/psutil_1699482842340/work
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+pyarrow==16.1.0
+pydantic==2.7.2
+pydantic_core==2.18.3
+pydeck==0.9.1
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+pytz==2024.1
+pywin32==305.1
+pyzmq @ file:///C:/b/abs_89aq69t0up/croot/pyzmq_1705605705281/work
+referencing==0.35.1
+requests==2.32.3
+rich==13.7.1
+rpds-py==0.18.1
+setuptools==69.5.1
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+smmap==5.0.1
+sniffio==1.3.1
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+streamlit==1.35.0
+tenacity==8.3.0
+toml==0.10.2
+toolz==0.12.1
+tornado @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/tornado_1699496839511/work
+tqdm==4.66.4
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1712329955671/work
+tzdata==2024.1
+urllib3==2.2.1
+watchdog==4.0.1
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+wheel==0.43.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
