--- a/requirements.txt
+++ b/requirements.txt
@@ -35,20 +35,21 @@ MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistralai==0.3.0
-nest_asyncio==1.6.0
+nest-asyncio==1.6.0
 numpy==1.26.4
 openai==1.30.5
 orjson==3.10.3
 packaging==24.0
 pandas==2.2.2
 parso==0.8.4
+pexpect==4.9.0
 pickleshare==0.7.5
 pillow==10.3.0
-pip==24.0
 platformdirs==4.2.2
 prompt-toolkit==3.0.42
 protobuf==4.25.3
 psutil==5.9.0
+ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==16.1.0
 pydantic==2.7.2
@@ -56,6 +57,7 @@ pydantic_core==2.18.3
 pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0
+python-dotenv==1.0.1
 pytz==2024.1
 pyzmq==25.1.2
 referencing==0.35.1
